// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Subscription AfterTitle should display only the cancel action because the subscription is not cancelled 1`] = `
<div>
  <div
    class="container"
  >
    <button
      aria-disabled="false"
      class="ui-button-wrapper-a432 ui-button-md-a432 ui-button-secondary-a432 ui-button-haslefticon-a432"
      data-name="button"
      data-rac=""
      data-react-aria-pressable="true"
      id="action-button-1"
      tabindex="0"
      type="button"
    >
      <div
        class="ui-button-surface-a432"
      >
        <span
          class="ui-button-content-a432"
        >
          <div
            class="ui-buttonslot-icon-504b ui-buttonslot-md-504b ui-buttonslot-leading-504b"
          >
            <i
              aria-hidden="true"
              class="material-icons"
            >
              block
            </i>
          </div>
          <span
            class="typography-bold-md ui-text-text-d239"
            data-name="text"
            style="text-align: left; text-wrap: nowrap;"
          >
            <strong>
              <span
                id="action-button-1-tooltip-target"
              />
              Cancel
            </strong>
          </span>
        </span>
      </div>
    </button>
  </div>
  <div
    class="fieldContainer staticField"
  >
    <span
      class="fieldLabel"
    >
      Created
      : 
    </span>
    <span
      class="fieldValue"
    />
  </div>
</div>
`;

exports[`Subscription TitleWrapper customer context should render custom link because it is set 1`] = `
<div>
  <a
    href="https://gorgias.io/asd1as2d3/"
    rel="noopener noreferrer"
    target="_blank"
  />
  <div>
    <div
      class="ui-badge-badge-0cf8 mt-2 ui-badge-uppercase-0cf8"
      data-color="default"
      data-corner="round"
      data-name="badge"
    />
  </div>
</div>
`;

exports[`Subscription TitleWrapper customer context should render default link because no custom link is set 1`] = `
<div>
  <a
    href="https://mystore-sp.admin.rechargeapps.com/merchant/subscriptions/789/details"
    rel="noopener noreferrer"
    target="_blank"
  />
  <div>
    <div
      class="ui-badge-badge-0cf8 mt-2 ui-badge-uppercase-0cf8"
      data-color="default"
      data-corner="round"
      data-name="badge"
    />
  </div>
</div>
`;

exports[`Subscription TitleWrapper should not render any link because no customer hash is available 1`] = `
<div>
  <a
    rel="noopener noreferrer"
    target="_blank"
  />
  <div>
    <div
      class="ui-badge-badge-0cf8 mt-2 ui-badge-uppercase-0cf8"
      data-color="default"
      data-corner="round"
      data-name="badge"
    />
  </div>
</div>
`;

exports[`Subscription TitleWrapper should not render any provided link when no customer hash is available 1`] = `
<div>
  <a
    rel="noopener noreferrer"
    target="_blank"
  />
  <div>
    <div
      class="ui-badge-badge-0cf8 mt-2 ui-badge-uppercase-0cf8"
      data-color="default"
      data-corner="round"
      data-name="badge"
    />
  </div>
</div>
`;

exports[`Subscription TitleWrapper ticket context should render custom link because it is set 1`] = `
<div>
  <a
    href="https://gorgias.io/asd1as2d3/"
    rel="noopener noreferrer"
    target="_blank"
  />
  <div>
    <div
      class="ui-badge-badge-0cf8 mt-2 ui-badge-uppercase-0cf8"
      data-color="default"
      data-corner="round"
      data-name="badge"
    />
  </div>
</div>
`;

exports[`Subscription TitleWrapper ticket context should render default link because no custom link is set 1`] = `
<div>
  <a
    href="https://mystore-sp.admin.rechargeapps.com/merchant/subscriptions/789/details"
    rel="noopener noreferrer"
    target="_blank"
  />
  <div>
    <div
      class="ui-badge-badge-0cf8 mt-2 ui-badge-uppercase-0cf8"
      data-color="default"
      data-corner="round"
      data-name="badge"
    />
  </div>
</div>
`;
